--- a/index.ipynb
+++ b/index.ipynb
@@ -142,9 +142,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[610, 11, 1373, 680, 54, 647, 25, 20]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "review_counts = [610, 11, 1373, 680, 54, 647, 25, 20]\n",
     "review_counts # [610, 11, 1373, 680, 54, 647, 25, 20]"
@@ -159,11 +170,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3420"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "total_reviews = None\n",
+    "total_reviews = 3420\n",
     "total_reviews # 3420"
    ]
   },
