--- a/index.ipynb
+++ b/index.ipynb
@@ -210,20 +210,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-14-80f448958315>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-14-80f448958315>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    format_restaurant(restaurants[0])  {'is_closed': False, 'name': 'Fork & Fig', 'price': 2, 'review_count': 610}\u001b[0m\n\u001b[0m                                       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
+     "data": {
+      "text/plain": [
+       "{'name': 'Fork & Fig', 'price': 2, 'is_closed': False, 'review_count': 610}"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "format_restaurant(restaurants[0])  {'is_closed': False, 'name': 'Fork & Fig', 'price': 2, 'review_count': 610}"
+    "format_restaurant(restaurants[0]) # {'is_closed': False, 'name': 'Fork & Fig', 'price': 2, 'review_count': 610}"
    ]
   },
   {
